Fix overflow issue

--- a/themes/base-hugo-theme/assets/scss/hyperobjekt-custom.scss
+++ b/themes/base-hugo-theme/assets/scss/hyperobjekt-custom.scss
@@ -734,7 +734,7 @@ body.home {
   .hero {
     height: 100vh;
     width: 100%;
-    overflow: hidden;
+   // overflow: hidden;
     @include media-breakpoint-up(md) {
       height: 660px;
     }
